# vctr

./: .gitignore  README.md  mypy.ini  pyproject.toml
notebooks/: DocstoreDemo.ipynb  LangchainDemo.ipynb  agent.json  agent.pickle  backtesting.ipynb  catboost.ipynb  crawler.ipynb  crawler2.ipynb  cross.ipynb  diff.ipynb  echo.ipynb  evalml.ipynb  features.ipynb  fetch.ipynb  label_data.json  label_test.ipynb  langchain.ipynb  list_file.pickle  llama.ipynb  lstm.ipynb  lstm2.ipynb  lstm2_torch.ipynb  neuro-evolution-agent.ipynb  parameterized.ipynb  rfc_for_after_lstm.py  rl1.ipynb  sell.ipynb  torch4.ipynb  torch5.ipynb  train_rfc_binary.ipynb  train_rfc_multi.ipynb  trend.ipynb  tsfresh.ipynb  tsfresh2.ipynb  win_rates.json  wringer.ipynb
vctr/: __init__.py  index.py
vctr/data/: __init__.py  data_loader.py  labeling.py  lstm_preprocessor.py
vctr/features/: correlated_feats.py  feature_engineering.py  nb.ipynb  util.py
vctr/models/: echo.py  lightning.py  lstm_keras.py  rfc_binary.py  rfc_multi.py
vctr/models/four/: cnn.py  thresh.py
vctr/models/lstm/: actions.py  criterion.py  data.py  defaults.py  genetic.py  hybrid.py  inference.py  lstm_model.py  main.py  metrics.py  thresholds.py  utils.py
vctr/pg/: environment.py  loss.py  model.py  nb.ipynb
vctr/rl/: agent.py  environment.py  model.py  nb.ipynb  nb2.ipynb
vctr/trading/: client.py  coins.py  dao.py  engine.py  order.py  playground.ipynb  symbols.py  trades.db
vctr/trading/utils/: main.py  misc.py  (+1 more)
vctr/utils/: cache.py  label_tracker.py  metrics.py  pf_stats.py  progress.py  workflow.py
