[tool.poetry]
name = "vctr"
version = "0.1.0"
description = ""
authors = [
    "Vince Coppola <vincecoppola@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ta-lib = "^0.4.25"
pandas = "^1.5.3"
pandas-ta = "^0.3.14b0"
vectorbtpro = { path = "../libhax/vectorbtpro-1.11.0-py3-none-any.whl" }
llvmlite = "^0.39.1"
scipy = "^1.10.1"
numba = "^0.56.4"
plotly = "^5.13.1"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
mypy = "^1.1.1"
python-dotenv = "^1.0.0"
stock-indicators = "^1.0.1"
notebook = "^6.5.3"
imbalanced-learn = "^0.10.1"
joblib = "^1.2.0"
klepto = "^0.2.3"
yfinance = "^0.2.12"
ta = "^0.10.2"
tqdm = "^4.65.0"
python-binance = "^1.0.17"
polygon = "^1.1.0"
colorama = "^0.4.6"
cachier = "^2.0.1"
tensorflow-macos = "^2.11.0"
tensorflow-metal = "^0.7.1"
gym = "^0.26.2"
backtesting = "^0.3.3"
gym-anytrading = "^1.3.2"
pymining = "^0.2"
gsp = "^0.4.0"
prefixspan = "^0.5.2"
pami = "^2023.1.2.2"
retry = "^0.9.2"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

[tool.autoimport.common_statements]
"np" = "import numpy as np"
"pd" = "import pandas as pd"
"nn" = "from torch import nn"
"pl" = "import lightning.pytorch as pl"
"torch" = "import torch"
